--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -13,11 +13,6 @@
                             </div>
                         </div>
                         <div class="dropdown mr-1">
-                            <!-- <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Lọc theo trạng thái
-                            </button> -->
                             <select [formControl]="statusForm">
                                 <option value=''>Tất cả</option>
                                 <option value='uncheck'>Chưa duyệt</option>
@@ -27,8 +22,8 @@
                                 <option value='suggest-fix'>Yêu cầu sửa lại</option>
                             </select>
                         </div>
-                        <!-- BUTTON THÊM NHÂN VIÊN -->
-                        <button class="btn btn-success btn-sm d-none d-md-block" (click)="Search()" routerLink="/admin/article">Tìm kiếm</button>
+                        <!-- BUTTON Tìm kiếm -->
+                        <button class="btn btn-success btn-sm d-none d-md-block" (click)="Search()">Tìm kiếm</button>
                     </div>
                 </div>
 
