--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -9,22 +9,18 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
                             <div id="demo-2">
-                                <input  class="search" type="search" placeholder="Tìm kiếm" (keyup)="onChange($event)" style="border: 1px solid #e6e6e6;">
+                                <input class="search" [formControl]="searchForm" type="search" placeholder="Tìm kiếm khách hàng" style="border: 1px solid #e6e6e6;">
                             </div>
                         </div>
 
                         <div class="dropdown mr-1">
-                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Lọc theo trạng thái
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <button class="dropdown-item" (click)="getAllCustomer()">Tất cả</button>
-                                <button class="dropdown-item" (click)="getAllActiveOrHiddenCustomer(false)">Hoạt động</button>
-                                <button class="dropdown-item" (click)="getAllActiveOrHiddenCustomer(true)">Đã khóa</button>
-                            </div>
+                            <select [formControl]="deletedForm">
+                                <option value=''>Tất cả</option>
+                                <option value='false'>Hoạt động</option>
+                                <option value='true'>Đã khóa</option>
+                            </select>
                         </div>
+                        <button class="btn btn-success btn-sm d-none d-md-block" (click)="Search()">Tìm kiếm</button>
                     </div>
                 </div>
 
@@ -45,7 +41,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let customer of customers">
+                                <tr *ngFor="let customer of customers | paginate: { itemsPerPage: 10, currentPage: page }">
                                     <!--// customers lấy từ class view-customer.components.ts -->
                                     <td [ngStyle]="{'text-align': 'center'}">#{{customer?.customerId}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{customer?.name}}</td>
@@ -74,24 +70,8 @@
                             </tbody>
                         </table>
                         <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                              <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                  <span aria-hidden="true">&laquo;</span>
-                                  <span class="sr-only">Previous</span>
-                                </a>
-                              </li>
-                              <li class="page-item" *ngFor="let item of arrayPage">
-                                  <a class="page-link" routerLink="/admin/customer" (click)="onPage(item)">{{item+1}}</a>
-                              </li>
-                              <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                  <span aria-hidden="true">&raquo;</span>
-                                  <span class="sr-only">Next</span>
-                                </a>
-                              </li>
-                            </ul>
-                          </nav>
+                            <pagination-controls (pageChange)="page = $event"></pagination-controls>
+                        </nav>
                     </div>
                 </div>
             </main>
