--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -13,7 +13,8 @@
                             </div>
                         </div>
                         <div class="dropdown mr-1">
-                            <select [formControl]="statusForm">
+                            <select [formControl]="statusForm"
+                            style="height: 36px; width: 93px;  border: 1px solid #AAAAAA; border-radius: 13px;">
                                 <option value=''>Tất cả</option>
                                 <option value='uncheck'>Chưa duyệt</option>
                                 <option value='active'>Đang đăng</option>
