--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -14,7 +14,8 @@
                         </div>
 
                         <div class="dropdown mr-1">
-                            <select [formControl]="deletedForm">
+                            <select [formControl]="deletedForm"
+                                    style="height: 36px; width: 93px;  border: 1px solid #AAAAAA; border-radius: 13px;">
                                 <option value=''>Tất cả</option>
                                 <option value='false'>Hoạt động</option>
                                 <option value='true'>Đã khóa</option>
