handle in client

--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -71,7 +71,7 @@
                         <div class="section-header"><span class="section-title">Danh sách tin đăng</span></div>
                         <ul class="post-listing clearfix">
                             <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
-                                post-id="585160" *ngFor="let article of articleNoVip">
+                                post-id="585160" *ngFor="let article of articleNoVip | paginate: { itemsPerPage: 14, currentPage: page }">
                                 <figure><a routerLink="/detail-article/{{article.articleId}}">
                                     <img class="lazy_done"
                                             src="{{article.image}}"
@@ -106,7 +106,8 @@
                             </li>
                         </ul>
                         <ul class="pagination">
-                            <li class="page-item">
+                            <pagination-controls (pageChange)="page = $event"></pagination-controls>
+                            <!-- <li class="page-item">
                               <a class="page-link" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
@@ -120,8 +121,8 @@
                                 <span aria-hidden="true">&raquo;</span>
                                 <span class="sr-only">Next</span>
                               </a>
-                            </li>
-                          </ul>
+                            </li> -->
+                        </ul>
                     </section>
                 </div>
 
