--- a/src/app/client/clients-page/detail-article/detail-article.component.css
+++ b/src/app/client/clients-page/detail-article/detail-article.component.css
@@ -3960,9 +3960,9 @@ figure img:hover {
 } */
 /* Thêm */
 .star.star-5 {
-    width: 100px;
+    width: 20px;
     height: 20px;
-    background: url("https://www.pinclipart.com/picdir/middle/17-170999_christmas-christmas-star-clip-art-library-amazing.png") left center repeat-x;
+    background: url("https://www.pngjoy.com/pngm/45/1032332_vip-next-icon-cinema-vip-seating-transparent-png.png") left center repeat-x;
     background-size: 20px 20px;
     display: inline-block;
     margin-right: 3px;
