--- a/src/app/client/clients-page/shared/aside/aside.component.css
+++ b/src/app/client/clients-page/shared/aside/aside.component.css
@@ -3619,7 +3619,7 @@ figure img:hover {
 .star {
     width: 14px;
     height: 17px;
-    background: url(https://www.pinclipart.com/picdir/middle/17-170999_christmas-christmas-star-clip-art-library-amazing.png) left center repeat-x;
+    background: url(https://www.pngjoy.com/pngm/45/1032332_vip-next-icon-cinema-vip-seating-transparent-png.png) left center repeat-x;
     background-size: 14px 14px;
     display: inline-block;
     margin-right: 3px;
