--- a/src/app/client/profiles/favorites-article/favorites-article.component.html
+++ b/src/app/client/profiles/favorites-article/favorites-article.component.html
@@ -39,13 +39,13 @@
                     Lọc theo trạng thái
                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=publish&amp;package=all">Tin đang hiển thị</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=expired&amp;package=all">Tin hết hạn</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=hidden&amp;package=all">Tin đang ẩn</a>
+                                    <a class="dropdown-item" routerLink="/profile/create-article">Tin đang hiển thị</a>
+                                    <a class="dropdown-item" routerLink="/profile/create-article">Tin hết hạn</a>
+                                    <a class="dropdown-item" routerLink="/profile/create-article">Tin đang ẩn</a>
                                 </div>
                             </div>
-                            <a class="btn btn-danger btn-sm d-none d-md-block" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a>
-                            <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a></div>
+                            <a class="btn btn-danger btn-sm d-none d-md-block" routerLink="/profile/create-article">Đăng tin mới</a>
+                            <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3" routerLink="/profile/create-article">Đăng tin mới</a></div>
                         </div>
                     </div>
 
@@ -71,7 +71,7 @@
                                         <!-- Image -->
                                         <td  [ngStyle]="{'text-align': 'center'}" *ngIf="article.articleId !== 'Bài đăng đã bị ẩn'">
                                             <div class="post_thumb">
-                                                <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
+                                                <a routerLink="/detail-article/{{article.articleId}}">
                                                     <img src="{{article.image}}">
                                                 </a>
                                             </div>
@@ -86,15 +86,15 @@
                                         <!-- Title -->
                                         <td *ngIf="article.articleId !== 'Bài đăng đã bị ẩn'">
                                             <span class="badge badge-pill badge-warning">Phòng trọ</span>
-                                            <a class="post_title" target="_blank" href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                            <a class="post_title" routerLink="/detail-article/{{article.articleId}}"
                                              style="color: #055699;">{{article.title}}</a>
                                             <div class="post_btn_toolbar mt-3">
-                                                <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
+                                                <a routerLink="/detail-article/{{article.articleId}}" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
                                             </div>
                                             <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần nhất: {{article.timeUpdate | date:'dd/MM/yyyy - HH:mm'}}</span>
                                         </td>
                                         <td [ngStyle]="{'text-align': 'center'}" *ngIf="article.articleId === 'Bài đăng đã bị ẩn'">
-                                            <a class="post_title" target="_blank" href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                            <a class="post_title" routerLink="/detail-article/{{article.articleId}}"
                                              style="color: #055699;">{{article.title}}</a>
                                         </td>
                                         <!-- Price -->
