--- a/src/app/admin/statistical/statistical-article/statistical-article.component.html
+++ b/src/app/admin/statistical/statistical-article/statistical-article.component.html
@@ -8,12 +8,18 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
                             <div id="demo-2">
-                                <input type="search" [formControl]="year" placeholder="Tìm theo năm" style="border: 1px solid #e6e6e6;">
+                                <input type="search" [formControl]="year" placeholder="Tìm theo năm" 
+                                    style=" height: 36px; border-radius: 12px; border: 1px solid #999999;">
                             </div>
                         </div>
                         <div id="hic">
                             <div id="demo-2">
-                                <input type="search" [formControl]="month" placeholder="Tìm theo tháng" style="border: 1px solid #e6e6e6;">
+                                <input type="search" [formControl]="month" placeholder="Tìm theo tháng" 
+                                style=" height: 36px;
+                                margin-right: 8px;
+                                margin-left: 8px;
+                                border-radius: 12px;
+                                border: 1px solid #999999;">
                             </div>
                         </div>
                         <button class="btn btn-success btn-sm d-none d-md-block" (click)="Search()">Tìm kiếm</button>
